support-tool: Fix spacing and color contrast in UI
Fix the spacing between titles and input fields and fix the color
contrast according to UX review and accessibility review feedback.
Update the headers as h1 instead of h2.
Remove the scrolling from data source checkbox lists.
Update the string for the radio-button.
Make the radio-button unselected by default.
See screenshots in slides 14-17 in go/log-aggregation-debug-page-mocks

Bug: b:236099230 b:236099237
Test: Manual testing. Please see screenshots attached.
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3706898
Commit-Queue: Irem Uguz <iremuguz@google.com>
Cr-Commit-Position: refs/heads/main@{#1016209}

--- a/chrome/browser/resources/support_tool/support_tool_shared.css
+++ b/chrome/browser/resources/support_tool/support_tool_shared.css
@@ -8,7 +8,7 @@
  * #css_wrapper_metadata_end */
 
 /* Common styles for Support Tool components. */
-h2 {
+h1 {
   color: var(--cr-text-color-primary);
   font-size: 20px;
   font-weight: normal;
@@ -19,20 +19,21 @@ h2 {
   color: var(--cr-title-text-color);
   font-size: 14px;
   line-height: 20px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .navigation-buttons {
   float: right;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-top: 32px;
   position: relative;
   right: 0;
 }
 
 .support-case-id {
   height: 32px;
+  margin-bottom: 3px;
   width: 248px;
 }
 
@@ -43,4 +44,8 @@ h2 {
 
 .data-collector-list {
   width: 520px;
+}
+
+cr-icon-button {
+  --cr-icon-button-fill-color: white;
 }
